feat: update og-image in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="canonical" href="https://cafe-sang.web.app/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="cafesang" />
-    <meta property="og:image" content="./logofull.webp" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogImage.webp" />
     <meta property="og:description" content="cafesang." />
     <meta property="og:site_name" content="cafesang" />
 
